--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "flow-bin": "^0.53.1",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "strip-indent": "^2.0.0"
   }
 }
