--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babylon-options": "^1.1.2"
   },
   "devDependencies": {
+    "babel-plugin-tester": "^4.0.0",
     "flow-bin": "^0.53.1",
     "jest": "^20.0.4",
     "strip-indent": "^2.0.0"
