--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "main": "index.js",
   "dependencies": {
-    "extract-react-types": "thejameskyle/extract-react-types"
+    "extract-react-types": "^0.1.1"
   }
 }
