Pins babel core to 7.0.0-alpha.19 until the fix from https://github.com/babel/babel/pull/6500 is ready

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "babel-core": "^7.0.0-alpha.19",
+    "babel-core": "7.0.0-alpha.19",
     "babel-errors": "^1.1.1",
     "babel-file": "^1.0.2",
     "babel-file-loader": "^1.0.3",
