--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "babel-core": "7.0.0-alpha.19",
     "babel-errors": "^1.1.1",
-    "babel-file-loader": "^1.0.3",
     "babel-file": "^1.0.2",
+    "babel-file-loader": "^1.0.3",
     "babel-flow-identifiers": "^1.1.3",
     "babel-flow-scope": "^1.2.1",
     "babel-identifiers": "^1.0.0",
+    "babel-normalize-comments": "^1.0.0",
     "babel-react-components": "^1.1.0",
-    "babylon-options": "^1.1.2",
     "babylon": "^7.0.0-beta.22",
+    "babylon-options": "^1.1.2",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
