--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "main": "index.js",
   "dependencies": {
-    "extract-react-types": "^0.2.2"
+    "extract-react-types": "^0.3.0-beta"
   }
 }
