--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "extract-react-types",
   "version": "0.5.0",
   "main": "index.js",
+  "repository": "atlassian/extract-react-types",
   "author": "James Kyle <me@thejameskyle.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "test": "jest"
   },
