--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
+    "ert-types": "^0.0.1",
     "flow-bin": "^0.53.1",
     "jest": "^21.2.1"
   }
