--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "ert-types": "^0.0.1",
-    "jest": "^22.2.2"
+    "husky": "^0.14.3",
+    "jest": "^22.2.2",
+    "prettier": "^1.10.2"
   }
 }
