many changes including pull types directly from extract-react-types

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "ert-types": "^0.0.1",
-    "extract-react-types": "^0.7.1",
-    "husky": "^0.14.3",
+    "flow-bin": "^0.65.0",
     "jest": "^22.2.2",
     "prettier": "^1.10.2"
+  },
+  "dependencies": {
+    "extract-react-types": "^0.7.1"
   }
 }
