--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kind-to-string",
-  "version": "0.0.0",
+  "name": "kind2string",
+  "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
   "author": "Atlassian",
