--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
   "name": "kind2string",
   "version": "0.1.1",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "author": "Atlassian",
   "repository": "gwyneplaine/kind2string",
   "scripts": {
-    "test": "jest"
+    "test": "yarn jest",
+    "build": "babel src -d dist --ignore __tests__/",
+    "prepublish": "yarn build && yarn test",
+    "dev": "yarn build --watch"
   },
+  "files": ["dist"],
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "extract-react-types": "^0.8.0",
     "flow-bin": "^0.65.0",
     "jest": "^22.2.2",
