--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kind2string",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "license": "MIT",
   "author": "Atlassian",
@@ -11,7 +11,9 @@
     "prepublish": "yarn build && yarn test",
     "dev": "yarn build --watch"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
