--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "babel-file": "^1.0.2",
     "babel-file-loader": "^1.0.3",
     "babel-flow-identifiers": "^1.1.3",
-    "babel-flow-scope": "^1.2.1",
     "babel-helper-simplify-module": "^2.2.0",
     "babel-identifiers": "^1.1.2",
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
     "babel-types": "^6.26.0",
+    "babel-type-scopes": "^1.1.0",
     "babylon": "^7.0.0-beta.22",
     "babylon-options": "^1.1.2",
     "strip-indent": "^2.0.0"
