--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "ast-pretty-print": "^2.0.1",
-    "babel-core": "7.0.0-alpha.19",
+    "@babel/core": "7.0.0-beta.56",
     "babel-errors": "^1.1.1",
     "babel-explode-module": "^2.0.0",
     "babel-file": "^1.0.2",
@@ -20,7 +20,7 @@
     "babel-identifiers": "^1.1.2",
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
-    "babel-types": "^6.26.0",
+    "@babel/types": "^7.0.0-beta.56",
     "babel-type-scopes": "^1.1.0",
     "babylon": "^7.0.0-beta.22",
     "babylon-options": "^1.1.2",
