--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-file": "^3.0.0",
     "babel-file-loader": "^2.0.0",
     "babel-flow-identifiers": "^1.1.3",
-    "babel-helper-simplify-module": "^2.2.0",
+    "babel-helper-simplify-module": "^2.2.1",
     "babel-identifiers": "^1.1.2",
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
@@ -27,7 +27,7 @@
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
-    "flow-bin": "^0.78.0",
+    "flow-bin": "0.61.0",
     "jest": "^21.2.1",
     "prettier": "^1.13.7"
   }
