--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ language: node_js
 node_js:
   - '8'
 cache: yarn
-script: yarn test
+script: |
+  yarn flow check
+  if [[ $? != 0 ]]; then exit 1; fi
+  yarn test
