--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
   "scripts": {
     "test": "jest"
   },
+  "keywords": [
+    "react",
+    "flow",
+    "typescript",
+    "prop-types",
+    "documentation"
+  ],
   "dependencies": {
     "@babel/core": "7.0.0-beta.56",
     "@babel/types": "^7.0.0-beta.56",
