--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "flow-bin": "0.61.0",
     "jest": "^21.2.1",
     "prettier": "^1.13.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
