--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -1,11 +1,20 @@
 {
   "name": "extract-react-types",
-  "version": "0.0.0",
-  "bolt": {
-    "workspaces": [
-      "packages/*"
-    ]
+  "version": "0.15.1",
+  "main": "index.js",
+  "repository": "atlassian/extract-react-types",
+  "author": "James Kyle <me@thejameskyle.com>",
+  "license": "Apache-2.0",
+  "scripts": {
+    "test": "jest"
   },
+  "keywords": [
+    "react",
+    "flow",
+    "typescript",
+    "prop-types",
+    "documentation"
+  ],
   "dependencies": {
     "@babel/core": "7.0.0-beta.56",
     "@babel/types": "^7.0.0-beta.56",
