--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "yarn jest",
     "build": "babel src -d dist --ignore __tests__/",
-    "prepublish": "yarn build && yarn test",
+    "prepublish1": "yarn build && yarn test",
     "dev": "yarn build --watch"
   },
   "files": [
@@ -21,10 +21,10 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
-    "extract-react-types": "^0.14.3",
+    "extract-react-types": "^0.15.1",
     "flow-bin": "^0.69.0",
-    "jest": "^22.2.2",
-    "prettier": "^1.12.0"
+    "jest": "^23.6.0",
+    "prettier": "^1.13.7"
   },
   "dependencies": {}
 }
