--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "yarn jest",
     "build": "babel src -d dist --ignore __tests__/",
-    "prepublish1": "yarn build && yarn test",
+    "prepublish": "yarn build && yarn test",
     "dev": "yarn build --watch"
   },
   "files": [
