move tests for pretty-proptypes from ava to jest

--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -4,7 +4,7 @@
   "description": "prettily render prop types from extract-react-types data",
   "main": "dist/index.js",
   "scripts": {
-    "test": "yarn ava",
+    "test": "yarn jest",
     "build": "babel src -d dist --ignore *.test.js",
     "prepublish": "yarn build",
     "dev": "yarn build --watch"
@@ -26,7 +26,6 @@
     "dist"
   ],
   "devDependencies": {
-    "ava": "^0.25.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -41,17 +40,11 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-react-types": "^0.15.0",
     "flow-bin": "^0.69.0",
+    "jest": "^23.6.0",
     "jsdom": "^11.7.0",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1"
-  },
-  "ava": {
-    "require": [
-      "babel-register",
-      "./setup-test-env.js"
-    ],
-    "babel": "inherit"
   }
 }
