--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 node_modules
-*.log
-.vscode
+
 **/dist
+
+# ignore all logs
+*.log
+
+# ignore editor generated files
+.vscode
+.idea
+.iml
+
+
+# ignore yarn.locks generated in packages
+packages/**/**/yarn.lock
