Single babel config + update the snapshot tests (#46)
* combined the babel config and added test script in the root of the project

* Do not run test inside k2s prepublish

* updated the snapshot tests for forward ref and memo

--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -6,9 +6,8 @@
   "author": "Atlassian",
   "repository": "gwyneplaine/kind2string",
   "scripts": {
-    "test": "yarn jest",
     "build": "babel src -d dist --ignore __tests__/",
-    "prepublish": "yarn build && yarn test",
+    "prepublish": "yarn build",
     "dev": "yarn build --watch"
   },
   "files": [
