moved the website from pretty-proptypes

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,27 @@ node_modules
 
 # ignore yarn.locks generated in packages
 packages/**/**/yarn.lock
+
+# from create react app
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
