--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "bolt": {
     "workspaces": [
-      "packages/*"
+      "packages/*",
+      "website"
     ]
   },
   "dependencies": {
@@ -28,6 +29,8 @@
     "babylon": "^7.0.0-beta.22",
     "babylon-options": "^2.0.1",
     "emotion": "^9.1.1",
+    "react-codemirror": "^1.0.0",
+    "react-scripts": "2.1.1",
     "react-markings": "^1.2.0",
     "strip-indent": "^2.0.0"
   },
