--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@atlaskit/build-releases": "^3.0.3",
-    "@babel/core": "7.0.0-beta.56",
+    "@babel/core": "^7",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/types": "^7.0.0-beta.56",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
@@ -30,12 +31,15 @@
     "babylon-options": "^2.0.1",
     "emotion": "^9.1.1",
     "react-codemirror": "^1.0.0",
-    "react-scripts": "2.1.1",
     "react-markings": "^1.2.0",
+    "react-scripts": "2.1.1",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -44,14 +48,21 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.69.0",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jsdom": "^11.7.0",
+    "null-loader": "^0.1.1",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
