--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -13,7 +13,7 @@
     "documentation"
   ],
   "dependencies": {
-    "@babel/core": "7.0.0-beta.56",
+    "@babel/core": "^7",
     "@babel/types": "^7.0.0-beta.56",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
