--- a/website/package.json
+++ b/website/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "website",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "extract-react-types": "^0.15.1",
-    "pretty-proptypes": "^0.5.0",
-    "react": "^16.3.1",
-    "react-codemirror": "^1.0.0",
-    "react-dom": "^16.3.1",
-    "react-scripts": "2.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "website",
+    "version": "0.0.0",
+    "devDependencies": {
+        "@babel/core": "^7",
+        "@babel/plugin-proposal-class-properties": "^7.3.0",
+        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-react": "^7.0.0",
+        "@babel/types": "^7.0.0-beta.56",
+        "babel-loader": "^8.0.5",
+        "css-loader": "^2.1.0",
+        "html-webpack-plugin": "^3.2.0",
+        "null-loader": "^0.1.1",
+        "style-loader": "^0.23.1",
+        "webpack": "^4.29.0",
+        "webpack-cli": "^3.2.1",
+        "webpack-dev-server": "^3.1.14"
+    },
+    "scripts": {
+        "start:dev": "webpack-dev-server"
+    },
+    "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.3.0",
+        "extract-react-types": "^0.15.1",
+        "pretty-proptypes": "^0.5.0"
+    }
 }
