--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -13,8 +13,8 @@
     "documentation"
   ],
   "dependencies": {
-    "@babel/core": "^7",
-    "@babel/types": "^7.0.0-beta.56",
+    "@babel/core": "^7.2.0",
+    "@babel/types": "^7.3.0",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
     "babel-explode-module": "^3.0.0",
@@ -26,7 +26,6 @@
     "babel-normalize-comments": "^1.0.1",
     "babel-react-components": "^1.1.0",
     "babel-type-scopes": "^1.1.0",
-    "babylon": "^7.0.0-beta.22",
     "babylon-options": "^2.0.1",
     "strip-indent": "^2.0.0"
   },
