added the react and react-dom as dependency to website and project

--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
   },
   "bolt": {
     "workspaces": [
-      "packages/extract-react-types",
-      "packages/kind2string"
+      "packages/*",
+      "website"
     ]
   },
   "dependencies": {
     "@atlaskit/build-releases": "^3.0.3",
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/types": "^7.3.0",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
@@ -30,12 +27,17 @@
     "babel-type-scopes": "^1.1.0",
     "babylon-options": "^2.0.1",
     "emotion": "^9.1.1",
+    "react": "^16.3.1",
     "react-codemirror": "^1.0.0",
+    "react-dom": "^16.3.1",
     "react-markings": "^1.2.0",
     "react-scripts": "2.1.1",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
@@ -43,9 +45,6 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "babel-plugin-emotion": "^9.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -55,9 +54,7 @@
     "jsdom": "^11.7.0",
     "null-loader": "^0.1.1",
     "prettier": "^1.13.7",
-    "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.3.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
