--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-type-scopes": "^1.1.0",
     "babylon-options": "^2.0.1",
     "emotion": "^9.1.1",
+    "lz-string": "^1.4.4",
     "react": "^16.3.1",
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.3.1",
@@ -57,6 +58,8 @@
     "css-loader": "^2.1.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
     "eslint-loader": "2.1.1",
@@ -65,38 +68,36 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
     "file-loader": "2.0.0",
+    "flow-bin": "^0.69.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "flow-bin": "^0.69.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
+    "jest": "^23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "jsdom": "^11.7.0",
     "mini-css-extract-plugin": "0.4.3",
+    "null-loader": "^0.1.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
+    "prettier": "^1.13.7",
+    "react-addons-test-utils": "^15.6.2",
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3",
-    "jest": "^23.6.0",
-    "jsdom": "^11.7.0",
-    "null-loader": "^0.1.1",
-    "prettier": "^1.13.7",
-    "react-addons-test-utils": "^15.6.2",
-    "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "3.6.3"
   }
 }
