--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-codemirror": "^1.0.0",
     "react-dom": "^16.3.1",
     "react-markings": "^1.2.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "strip-indent": "^2.0.0"
   },
