--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "jest-in-case": "^1.0.2",
     "react-markings": "^1.2.0",
     "strip-indent": "^2.0.0"
   },
