update configs to align them all before publish

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "test": "jest",
     "changeset": "bolt build-releases changeset",
+    "version": "bolt build-releases version",
+    "publish": "yarn build && yarn check && bolt publish",
     "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
     "check": "yarn lint && yarn test && yarn flow"
