--- a/packages/extract-react-types-loader/package.json
+++ b/packages/extract-react-types-loader/package.json
@@ -2,6 +2,17 @@
   "name": "extract-react-types-loader",
   "version": "0.3.0",
   "main": "index.js",
+  "repository": "atlassian/extract-react-types",
+  "description": "Load extract-react-types data given a fiile path, using webpack",
+  "license": "MIT",
+  "author": "Ben Conolly",
+  "keywords": [
+    "react",
+    "flow",
+    "typescript",
+    "prop-types",
+    "documentation"
+  ],
   "dependencies": {
     "extract-react-types": "^0.15.1"
   }
