modify changeset config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "changeset": "bolt build-releases changeset",
     "version": "bolt build-releases version",
-    "publish": "yarn build && yarn check && bolt publish",
+    "publish": "yarn build && yarn check && build-releases publish --public",
     "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
     "check": "yarn lint && yarn test && yarn flow"
