--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "bolt": {
     "workspaces": [
-      "packages/*"
+      "packages/*",
+      "website"
     ]
   },
   "preconstruct": {
@@ -85,6 +86,9 @@
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   }
 }
