--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "bolt": {
     "workspaces": [
       "packages/*",
-      "website"
+      "website",
+      "website/loaders/*"
     ]
   },
   "preconstruct": {
@@ -87,6 +88,7 @@
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
