--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "description": "prettily render prop types from react components",
   "repository": "atlassian/extract-react-types",
-  "main": "dist/index.js",
+  "main": "dist/pretty-proptypes.cjs.js",
   "scripts": {
     "build": "babel src -d dist --ignore *.test.js",
     "prepublish": "yarn build",
@@ -42,5 +42,6 @@
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1"
-  }
+  },
+  "module": "dist/pretty-proptypes.esm.js"
 }
