--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -4,11 +4,7 @@
   "description": "prettily render prop types from react components",
   "repository": "atlassian/extract-react-types",
   "main": "dist/pretty-proptypes.cjs.js",
-  "scripts": {
-    "build": "babel src -d dist --ignore *.test.js",
-    "prepublish": "yarn build",
-    "dev": "yarn build --watch"
-  },
+  "module": "dist/pretty-proptypes.esm.js",
   "keywords": [
     "extract-react-types",
     "react",
@@ -42,6 +38,5 @@
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.3.1"
-  },
-  "module": "dist/pretty-proptypes.esm.js"
+  }
 }
