--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
     "validate": "yarn lint && yarn test && yarn flow",
-    "build": "bolt ws build"
+    "build": "preconstruct build",
+    "clean": "yarn delete:modules && yarn delete:dist",
+    "delete:dist": "bolt ws exec --parallel -- rm -rf dist",
+    "delete:modules": "bolt ws exec --parallel -- rm -rf node_modules && rm -rf node_modules"
   },
   "bolt": {
     "workspaces": [
       "packages/*"
+    ]
+  },
+  "preconstruct": {
+    "packages": [
+      "packages/kind2string",
+      "packages/pretty-proptypes"
     ]
   },
   "dependencies": {
@@ -67,6 +76,7 @@
     "jest": "^23.6.0",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
+    "preconstruct": "^0.0.58",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
