--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@babel/core": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "@babel/types": "^7.0.0-beta.56",
+    "@babel/types": "^7.4.0",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
     "babel-explode-module": "^3.0.0",
