--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -13,5 +13,7 @@
   "devDependencies": {
     "extract-react-types": "^0.16.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime": "^7.4.4"
+  }
 }
