--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -14,6 +14,7 @@
   "author": "Ben Conolly",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.4.4",
     "emotion": "^9.1.1",
     "kind2string": "^0.5.2",
     "react-markings": "^1.2.0"
