--- a/packages/babel-plugin-extract-react-types/package.json
+++ b/packages/babel-plugin-extract-react-types/package.json
@@ -20,7 +20,7 @@
     "extract-react-types": "^0.16.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.56",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-syntax-flow": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-syntax-typescript": "^7.2.0",
