--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
       "packages/pretty-proptypes"
     ]
   },
+  "transform": {
+    "^.+\\.jsx?$": "babel-jest"
+  },
   "dependencies": {
     "@atlaskit/build-releases": "^3.0.3",
     "@babel/core": "^7.4.4",
@@ -60,6 +63,7 @@
     "eslint-plugin-react": "^7.12.4",
     "jest-in-case": "^1.0.2",
     "react-markings": "^1.2.0",
+    "resolve": "^1.10.1",
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
@@ -69,6 +73,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^24.7.1",
     "babel-plugin-emotion": "^9.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
