upgrade preconstruct and add postinstall step that ensure flow types are available between pacakges

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "changeset": "bolt build-releases changeset",
     "version-all": "bolt build-releases version",
     "publish-changed": "yarn validate && build-releases publish --public",
+    "postinstall": "npx preconstruct dev",
     "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
     "validate": "yarn lint && yarn test && yarn flow",
@@ -88,7 +89,7 @@
     "jest": "^24.7.1",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
-    "preconstruct": "^0.0.58",
+    "preconstruct": "^0.0.64",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
