upgrades flow-bin to 0.97.0 (#69)
* upgrades flow-bin to 0.97.0

* Bump flowbin@0.98.0, using preconstruct to build cjs, adds @babel/core@7.4.4 and [presets]

* WIP - we need to make test pass.....

* Convert packages to ES modules and use babel-jest for tests

* Revert back to index.test.js

* Revert babel-loader and update babel core

* Cleaning up after Peter

* Require e-r-t for CJS with .default

* updates test failing after babel upgrade

* adds babel information

* adds changeset

* ignores flow problems

* upgrade preconstruct and add postinstall step that ensure flow types are available between pacakges

* drops npx prefix in postinstall

* adds src to extract-react-types published files

* changes extractReactTypes to be a named export

* updates changeset to reflect named export change

* Delete TODO.md

* replaces comment style type annotations with standard annotations

--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -11,7 +11,10 @@
     "dist"
   ],
   "devDependencies": {
+    "babel-jest": "^24.7.1",
     "extract-react-types": "^0.16.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime": "^7.4.4"
+  }
 }
