--- a/packages/extract-react-types/package.json
+++ b/packages/extract-react-types/package.json
@@ -17,11 +17,11 @@
     "documentation"
   ],
   "dependencies": {
+    "@aparna036/babel-explode-module": "^2.0.1",
     "@babel/core": "7.0.0-beta.56",
     "@babel/types": "^7.0.0-beta.56",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
-    "babel-explode-module": "^3.0.0",
     "babel-file": "^3.0.0",
     "babel-file-loader": "^2.0.0",
     "babel-flow-identifiers": "^1.1.3",
