--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "changeset": "changeset",
     "bump": "changeset bump",
-    "release": "changeset release --public",
+    "release": "yarn build && changeset release --public",
     "postinstall": "preconstruct dev",
     "dev:pretty-proptypes": "bolt w pretty-proptypes run dev",
     "lint": "yarn eslint \"./**/*.js\"",
@@ -63,6 +63,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "jest-in-case": "^1.0.2",
+    "preconstruct": "^0.0.81",
     "react-markings": "^1.2.0",
     "resolve": "^1.10.1",
     "strip-indent": "^2.0.0"
@@ -89,7 +90,6 @@
     "jest": "^24.7.1",
     "jest-in-case": "^1.0.2",
     "jsdom": "^11.7.0",
-    "preconstruct": "^0.0.64",
     "prettier": "^1.13.7",
     "react": "^16.3.1",
     "react-addons-test-utils": "^15.6.2",
