--- a/packages/pretty-proptypes/package.json
+++ b/packages/pretty-proptypes/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.4.4",
-    "emotion": "^9.1.1",
+    "@emotion/core": "^10.0.14",
     "kind2string": "^0.6.1",
     "react-markings": "^1.2.0"
   },
@@ -23,15 +23,6 @@
     "dist"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-emotion": "^9.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "extract-react-types": "^0.20.1",
