add scope to existing packages, with slight rename, versions are the same

--- a/packages/babel-plugin-extract-react-types/package.json
+++ b/packages/babel-plugin-extract-react-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-plugin-extract-react-types",
+  "name": "@extract-types/babel-plugin-extract-react-types",
   "version": "0.1.6",
   "main": "index.js",
   "license": "MIT",
