--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kind2string",
+  "name": "@extract-types/kind2string",
   "version": "0.6.3",
   "main": "dist/kind2string.cjs.js",
   "module": "dist/kind2string.esm.js",
