--- a/packages/babel-plugin-extract-react-types/package.json
+++ b/packages/babel-plugin-extract-react-types/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "Mitchell Hamilton",
   "dependencies": {
-    "extract-react-types": "^0.22.0"
+    "@extract-types/core": "^0.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
