--- a/packages/extract-react-types-loader/package.json
+++ b/packages/extract-react-types-loader/package.json
@@ -14,6 +14,6 @@
     "documentation"
   ],
   "dependencies": {
-    "extract-react-types": "^0.22.0"
+    "@extract-types/core": "^0.22.0"
   }
 }
