--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -12,7 +12,7 @@
   ],
   "devDependencies": {
     "babel-jest": "^24.7.1",
-    "extract-react-types": "^0.22.0"
+    "@extract-types/core": "^0.22.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.4"
