rename extract-react-types folder

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "preconstruct": {
     "packages": [
-      "packages/extract-react-types",
+      "packages/core",
       "packages/kind2string",
       "packages/pretty-proptypes"
     ]
