--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@babel/plugin-syntax-typescript": "^7.2.0",
     "@babel/runtime": "^7.4.4",
     "@babel/types": "^7.0.0-beta.56",
-    "@changesets/cli": "^1.3.0",
+    "@changesets/changelog-github": "^0.1.0",
+    "@changesets/cli": "^2.1.2",
     "@emotion/core": "^10.0.14",
     "ast-pretty-print": "^2.0.1",
     "babel-errors": "^1.1.1",
