--- a/packages/kind2string/package.json
+++ b/packages/kind2string/package.json
@@ -1,15 +1,13 @@
 {
   "name": "kind2string",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "main": "dist/kind2string.cjs.js",
   "module": "dist/kind2string.esm.js",
   "license": "MIT",
   "author": "Atlassian",
   "repository": "atlassian/extract-react-types",
   "description": "Utility to ensure extract-react-types output can be rendered without errors",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "babel-jest": "^24.7.1",
     "extract-react-types": "^0.22.0"
